--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 
 PORT=3001
-DB=mongodb+srv://lagr:Greger2033@cluster0.nqow65v.mongodb.net/Card
+DB=mongodb+srv://******@cluster0.nqow65v.mongodb.net/Card
